--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ footer p {
 	box-shadow: inset 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
-#mainContainer {
+.mainContainer {
 	margin: 20px auto;
 	width: 80%;
 	padding: 20px;
